--- a/shopmanager/shopback/items/templates/items/product_detail.html
+++ b/shopmanager/shopback/items/templates/items/product_detail.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html >
+<html>
   <head>
     <title>库存商品</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
     <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
     <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
+    <script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
     <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery-table2csv-addon/jquery.table2csv.0.1.1.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery/addons/jquery.upload.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
+    <!--<script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.jquery.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script> -->
     <style type="text/css" title="currentStyle">
     	@import "{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css";
-		@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
-		@import "{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css";
+    	@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
+    	@import "{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css";
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
 		@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
 		@import "{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.min.css";
@@ -28,7 +27,7 @@
     	padding:0px;
     }
     body{
-    	width:1000px;
+    	width:1200px;
     }
     .table-bordered {
 	    border: 1px solid #DDD;
@@ -63,6 +62,10 @@
 	.table tbody tr:hover td, .table tbody tr:hover th {
 	    background-color: whiteSmoke;
 	}
+	.container{
+		margin-top:40px;
+		width:1200px;
+	}
     .simple-text {
 	    width:120px;
 	    height:16px;
@@ -73,14 +76,10 @@
 		font-size:24px;
 		line-height:24px;
 	}
-	.content-main{
-		margin-top:40px;
-		display:fixed;
-	}
 	.content-base-info {
 		display:fixed;
 	}
-	label{
+	.container label{
 		display:inline;
 		margin:0px 10px;
 	}
@@ -113,7 +112,7 @@
 		border-color: gray;
 		margin-bottom:0px;
 	}
-	
+
 	#product-table input[type="text"]{
 		width:90px;
 		margin-bottom:0px;
@@ -122,10 +121,30 @@
 	}
 	
 	#productsku-table input[type="text"]{
-		width:60px;
+		width:50px;
 		margin-bottom:0px;
 		margin-top:0px;
 		height:14px;
+	}
+	
+	#product-quantity-dialog{
+		display:none;
+		position:absolute;
+		z-index:99;
+		background: #fff;
+		border: 1px solid #999;
+		font-size:14px;
+	}
+	
+	#product-quantity-dialog input[type="text"],#product-quantity-dialog input[type="submit"]{
+		display:inline-block;
+		margin:1px 2px;
+		padding:1px 2px;
+	}
+	#product-quantity-dialog input[type="radio"],#product-quantity-dialog input[type="checkbox"]{
+		display:inline-block;
+		margin:1px 2px 5px 2px;
+		padding:1px 2px;
 	}
 	
 	textarea{
@@ -135,12 +154,49 @@
 	    color: red;
 	    font-weight: bold;
 	}
+	#assign .label-block{
+		margin: 0px; 
+		display: inline-block; 
+		width: 24%;
+	}
+	
+	#assign .label-block input{
+		width:80px;
+		height:16px;
+		margin-bottom:0px;
+		margin-left:4px;
+	}
+	
+	#assign #dialog-center input{
+		width:60px;
+	}
+	
+	#assign #dialog-head label{
+		height:16px;
+		margin-right:4px;
+	}
+	
+	#assign #dialog-footer{
+		text-align:center;
+	}
+	.tab-pane{
+		min-height:350px;
+		max-height:500px;
+		overflow:auto;
+	}
+	.control-group .prepend-input{
+		font-size: 16px;
+	}
+	.label-toast {
+		margin-left:50px;
+		display:none;
+	}
     </style>
   </head>
 
 {% with product=object %}
  <body>
-	<div class="content-main">
+	<div class="container">
 		<fieldset>
 			<legend>
 				<h2 class="head-title" >商品信息
@@ -149,7 +205,7 @@
 				</h2>
 			</legend>
 			<div class="content-base-info">
-				<form id="product-form" method="POST" action="/product/{{ product.id }}/">
+				<form id="product-form" method="POST" action="/items/product/{{ product.id }}/">
 				{% csrf_token %}
 				<input type="hidden" id="id" name="id" value="{{ product.id }}" />
 				<table id="product-table" class="table table-bordered table-striped table-condensed">
@@ -170,10 +226,11 @@
 					<tr>
 						<td>
 							<label for='collect_num'>库&nbsp;存&nbsp;&nbsp;数</label>
-							<input type="text" id="collect_num"  class="product-num simple-text" value="{{ product.collect_num }}"/>
+							<input type="text" id="quantity-{{ product.id }}" sp='p' class="quantity" class="product-num simple-text" 
+							value="{{ product.collect_num }}" {% if product.skus %}disabled{% endif %}/>
 						</td>
 						<td>
-							<label for='remain_num'>保&nbsp;留&nbsp;&nbsp;数</label>
+							<label for='remain_num'>预&nbsp;留&nbsp;&nbsp;数</label>
 							<input type="text" id="remain_num" name="remain_num" class="simple-text" value="{{ product.remain_num }}"/>
 						</td>
 						<td>
@@ -185,7 +242,7 @@
 							<input type="text" id="wait_post_num" name="wait_post_num" class="simple-text" value="{{ product.wait_post_num }}"/>
 						</td>
 						<td>
-							<label for='weight'>重&nbsp;&nbsp;&nbsp;量</label>
+							<label for='weight'>重&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;量</label>
 							<input type="text" id="weight" name="weight" class="simple-text" value="{{ product.weight }}"/>
 						</td>
 					</tr>
@@ -207,32 +264,37 @@
 							<input type="text" id="agent_price" name="agent_price" class="simple-text" value="{{ product.agent_price }}"/>
 						</td>
 						<td>
-							<label for='staff_price'>员工价</label>
+							<label for='staff_price'>员&nbsp;工&nbsp;&nbsp;价</label>
 							<input type="text" id="staff_price" name="staff_price" class="simple-text" value="{{ product.staff_price }}"/>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<label for='is_split'>需拆分</label>
+							<label for='is_split'>需&nbsp;拆&nbsp;&nbsp;分</label>
 							<input type="checkbox" id="is_split" name="is_split" class="simple-text" value="{{ product.is_split }}"/>
-						</td>
-						<td>
-							<label for='is_match'>有匹配</label>
-							<input type="checkbox" id="is_match" name="is_match" class="simple-text" value="{{ product.is_match }}"/>
 						</td>
 						<td>
 							<label for='sync_stock'>库存同步</label>
 							<input type="checkbox" id="sync_stock" name="sync_stock" class="simple-text required" value="{{ product.sync_stock}}"/>
 						</td>
-						<td colspan="2">
-							<label for='post_check'>需扫描</label>
-							<input type="checkbox" id="post_check" name="post_check" class="simple-text required" value="{{ product.post_check }}"/>
+						<td >
+							<label for='post_check'>需&nbsp;扫&nbsp;&nbsp;描</label>
+							<input type="checkbox" id="post_check" name="post_check" class="simple-text required" value="{{ product.post_check}}"/>
+						</td>
+						<td >
+							<label for='is_match'>需&nbsp;匹&nbsp;&nbsp;配</label>
+							<input type="checkbox" id="is_match" name="is_match" class="simple-text required" value="{{ product.is_match}}"/>
+						</td>
+						<td>
+							<label for='match_reason'>匹配原因</label>
+							<input type="text" id="match_reason" name="match_reason" class="simple-text " value="{{ product.match_reason}}"/>
 						</td>
 					</tr>
 					<tr>
 						<td colspan="2">
 							<label for='buyer_prompt'>客户提示</label>
-							<textarea id="buyer_prompt" style="width:200px;" name="buyer_prompt" rows="2" cols="100">{{ product.buyer_prompt }}</textarea>
+							<textarea id="buyer_prompt" style="width:200px;" name="buyer_prompt" rows="2" cols="100" >
+							{{ product.buyer_prompt }}</textarea>
 						</td>
 						<td colspan="2">
 							<label for='memo'>备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注</label>
@@ -256,27 +318,29 @@
 						<table id="productsku-table" class="table table-bordered table-condensed">
 							<thead>
 								<tr>
+									<th>规格ID</th>
 									<th>规格编码</th>
-									<th>线上属性</th>
-									<th>系统属性</th>
-									<th>库存数</th>
-									<th>待发数</th>
-									<th>预留数</th>
-									<th>警戒数</th>
-									<th>成本价</th>
-									<th>标售价</th>
-									<th>代理价</th>
-									<th>员工价</th>
-									<th>操作</th>
+									<th style="width:150px;">线上属性</th>
+									<th style="width:150px;">系统属性</th>
+									<th style="width:70px;">库存数</th>
+									<th style="width:70px;">待发数</th>
+									<th style="width:70px;">预留数</th>
+									<th style="width:70px;">警戒数</th>
+									<th style="width:70px;">成本价</th>
+									<th style="width:70px;">标售价</th>
+									<th style="width:70px;">代理价</th>
+									<th style="width:70px;">员工价</th>
+									<th style="width:60px;">操作</th>
 								</tr>
 							</thead>
 							<tbody>
 								{% for sku in product.skus %}
 								<tr class="{% cycle 'odd' 'even' %}">
+									<td>{{ sku.id }}</td>
 									<td>{{ sku.outer_id }}</td>
 									<td>{{ sku.properties_name }}</td>
-									<td>{{ sku.properties_alias }}</td>
-									<td>{{ sku.quantity }}</td>
+									<td class="property-td">{{ sku.properties_alias }}</td>
+									<td><input type="text" id="quantity-{{ product.id }}-{{ sku.id }}" sp='s' class="quantity" value="{{ sku.quantity }}"/></td>
 									<td>{{ sku.wait_post_num }}</td>
 									<td>{{ sku.remain_num }}</td>
 									<td>{{ sku.warn_num }}</td>
@@ -284,7 +348,6 @@
 									<td>{{ sku.std_sale_price }}</td>
 									<td>{{ sku.agent_price }}</td>
 									<td>{{ sku.staff_price }}</td>
-									<td>{{ sku. }}</td>
 									<td><a class="edit" href="#" title="修改"><icon
 										class="icon-edit"></icon></a><a class="setup" href="#" title="设置"><icon
 										class="icon-asterisk"></icon></a><a class="remain" href="#" title="待用"><icon
@@ -295,12 +358,12 @@
 								{% endfor %}
 							</tbody>
 							<tfoot>
-								<tr><td colspan="3"></td>
+								<tr><td colspan="4"></td>
 									<td><input id="total_num" type="text"  value="0" readonly/></td>
-									<td><input id="total_wait_num" type="text"  value="0.0" readonly/></td>
-									<td></td>
+									<td colspan="2"></td>
 									<td >总成本：</td>
 									<td><input id="total_cost" type="text"  value="0.0" readonly/></td>
+									<td colspan="4"></td>
 								</tr>
 							</tfoot>
 						</table>
@@ -309,41 +372,96 @@
 			</div>
 		</fieldset>
 	</div>
-	<!-- 采购项目选择对话框 -->
-	<div id="purchase-prompt" class="purchase-prompt">
-		<div id="purchase-prompt-head" class="purchase-prompt-head">
-			<h4 class="prompt-title">采购项目选择框</h4>
-			<a id="prompt-close" class="prompt-close"><i class="icon-remove-sign"></i></a>
+	<!-- 商品规格库存修改对话框 -->
+	<div id="product-quantity-dialog"  >
+		<form id="quantity-form" method="POST" action="/items/update/stock/" style="margin-bottom:0px;">
+			<input type="hidden" name="product_id" value="{{ product.id }}"/>
+			<input type="hidden" name="sku_id" value=""/>
+			<input type="text" name="num" style="width:80px;" 
+			/><input type="radio" class="radio-mode" name="mode" value="1" checked
+			/>全量<input type="radio" class="radio-mode" name="mode" value="0" 
+			/>增量<input type="checkbox"  id="reduce-num" 
+			/>入库减<input type="text"  name="reduce_num" value="0" style="display:none;width:40px;"
+			/><input type="submit" class="btn btn-mini btn-primary" value="确定" /> 
+		</form>
+	</div>
+	<!-- 商品规格设置对话框 -->
+	<div id="product-setup-dialog" style="display:none;">
+		<div id="dialog-head">
+			<ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+			  <li class="active"><a href="#main" data-toggle="tab">基本设置</a></li>
+			  <li ><a href="#assign" data-toggle="tab">分配库存</a></li>
+			  <li ><a href="#spliter" data-toggle="tab">拆分商品</a></li>
+			</ul>
 		</div>
-		<div id="purchase-prompt-body" class="purchase-prompt-body">
-			<table id="purchase-select-table" class="table table-bordered">
-				<thead>
-						<th>序号</th>
-						<th>商家编码</th>
-						<th>商品名</th>
-						<th>规格编码</th>
-						<th>规格名</th>
-						<th>标准进价</th>
-						<th>采购数</th>
-						<th>操作</th>
-				</thead>
-				<tbody>
-				</tbody>
-			</table>
+		<div id="dialog-body" class="tab-content">
+			<div id="main" class="tab-pane active" >
+				<form id="main-form" method="POST" action="#" class="form-horizontal">
+				  <fieldset>
+				  <div class="control-group">
+				    <div class="controls">
+				      <label class="checkbox">
+				        <input type="checkbox" id="sku_sync_stock" name="sync_stock"> 同步库存
+				      </label>
+				    </div>
+				  </div>
+				  <div class="control-group">
+			          <label class="control-label" for="sku_is_match">规格匹配</label>
+			          <div class="controls">
+			          	<div class="input-prepend">
+			              <span class="add-on">
+			                <label class="checkbox">
+			                  <input type="checkbox" id="sku_is_match" name="is_match" class="">
+			                </label>
+			              </span>
+			              <input type="text" id="sku_match_reason" name="match_reason" placeholder="规格匹配原因" class="prepend-input">
+			             </div>
+			          </div>
+			      </div>
+			      <div class="control-group">
+			         <label class="control-label" for="sku_post_check">需扫描</label>
+			         <div class="controls">
+			            <div class="input-prepend">
+			              <span class="add-on">
+			                <label class="checkbox">
+			                  <input type="checkbox" id="sku_post_check" name="post_check" class="">
+			                </label>
+			              </span>
+			              <input type="text" id="sku_barcode" name="barcode" placeholder="规格扫描条码"  class="prepend-input" >
+			            </div>
+			          </div>
+			        </div>
+				  <div class="control-group">
+				    <label class="control-label" for="sku_buyer_prompt">客户提示</label>
+				    <div class="controls">
+				      <input type="text" id="sku_buyer_prompt" name="buyer_prompt" style="width:300px;" placeholder="提示信息（会通过发货单，短信告知客户）">
+				    </div>
+				  </div>
+				  <div class="control-group">
+			          <label class="control-label" for="sku_memo">备注</label>
+			          <div class="controls">
+			            <div class="textarea">
+			              <textarea id="sku_memo" name="memo" class=""> </textarea>
+			            </div>
+			          </div>
+			      </div>
+				  <div class="control-group">
+			          <div class="controls">
+				  		<input type="submit" class="btn btn-large btn-primary" value="保存" /> 
+				  		<div class="label-toast"><label class="label label-success" >保存成功！</label></div>
+				  	  </div>
+				  </div>
+				   </fieldset>
+				</form>
+			</div>
+			<div id="assign" class="tab-pane">
+			</div>
+			<div id="spliter" class="tab-pane">
+				拆分商品待续...
+			</div>
 		</div>
 	</div>
 </body>
 {% endwith %}
-<script src="{{ STATIC_URL }}script/base.js"></script>
-<script type="text/javascript">
-	$("#purchase-form").validate({rules: {
-			extra_name: 'required',
-			receiver_name: 'required',
-			supplier_id: 'required',
-			deposite_id: 'required',
-			service_date: 'required',
-            prepay_cent: {required:true,number:true,max:1},
-     },});
-     $('.chosen-select').chosen({search_contains:true});
-</script>
+<script src="{{ STATIC_URL }}script/items/productAndSkuMgr.js" type="text/javascript"></script>
 </html>
