--- a/shopmanager/shopback/items/templates/items/product_stock_warn.html
+++ b/shopmanager/shopback/items/templates/items/product_stock_warn.html
@@ -4,7 +4,6 @@
 <title>商品库存警告处理界面</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-<script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
 <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
 <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
 <script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
@@ -111,7 +110,10 @@ td a {
 #assgin-dialog #dialog-footer{
 	text-align:center;
 }
-
+.label-toast {
+		margin-left:50px;
+		display:none;
+}
 </style>
 </head>
 <body>
