--- a/shopmanager/shopback/items/templates/items/product_detail.html
+++ b/shopmanager/shopback/items/templates/items/product_detail.html
@@ -9,10 +9,6 @@
     <script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
     <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
-    <!--<script src="{{ STATIC_URL }}jquery/addons/cn_message.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery/addons/jquery.validate.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}jquery/addons/chosen_v1.0.0/chosen.jquery.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}admin/js/admin/RelatedObjectLookups.js" type="text/javascript"></script> -->
     <style type="text/css" title="currentStyle">
     	@import "{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css";
     	@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
@@ -41,9 +37,6 @@
 	.table {
 	    width: 100%;
 	    margin-bottom: 4px;
-	}
-	form {
-		margin-bottom:4px;
 	}
 	table {
 	    max-width: 100%;
@@ -107,6 +100,9 @@
 	.content-search {
 		width:100%;
 		height:20px;
+	}
+	.panel-body{
+		margin-bottom:40px;
 	}
 	.panel-body .table {
 		border-color: gray;
@@ -271,19 +267,19 @@
 					<tr>
 						<td>
 							<label for='is_split'>需&nbsp;拆&nbsp;&nbsp;分</label>
-							<input type="checkbox" id="is_split" name="is_split" class="simple-text" value="{{ product.is_split }}"/>
+							<input type="checkbox" id="is_split" name="is_split" class="simple-text" {% if product.is_split %}checked{% endif %}/>
 						</td>
 						<td>
 							<label for='sync_stock'>库存同步</label>
-							<input type="checkbox" id="sync_stock" name="sync_stock" class="simple-text required" value="{{ product.sync_stock}}"/>
+							<input type="checkbox" id="sync_stock" name="sync_stock" class="simple-text required" {% if product.sync_stock %}checked{% endif %}/>
 						</td>
 						<td >
 							<label for='post_check'>需&nbsp;扫&nbsp;&nbsp;描</label>
-							<input type="checkbox" id="post_check" name="post_check" class="simple-text required" value="{{ product.post_check}}"/>
+							<input type="checkbox" id="post_check" name="post_check" class="simple-text required" {% if product.post_check %}checked{% endif %}/>
 						</td>
 						<td >
 							<label for='is_match'>需&nbsp;匹&nbsp;&nbsp;配</label>
-							<input type="checkbox" id="is_match" name="is_match" class="simple-text required" value="{{ product.is_match}}"/>
+							<input type="checkbox" id="is_match" name="is_match" class="simple-text required" {% if product.is_match %}checked{% endif %}/>
 						</td>
 						<td>
 							<label for='match_reason'>匹配原因</label>
