--- a/shopmanager/shopback/items/templates/items/product_detail.html
+++ b/shopmanager/shopback/items/templates/items/product_detail.html
@@ -208,7 +208,8 @@
 					<tr>
 						<td>
 							<label for='outer_id'>商品编码</label>
-							<input type="text" id="outer_id" name="outer_id" class="simple-text" value="{{ product.outer_id }}"/>
+							<input type="text" id="outer_id" name="outer_id" class="simple-text" value="{{ product.outer_id }}" readonly/>
+							<a class="code-edit"><icon class="icon-pencil"></icon></a>
 						</td>
 						<td colspan="2">
 							<label for='barcode'>扫描条码</label>
@@ -315,17 +316,17 @@
 							<thead>
 								<tr>
 									<th>规格ID</th>
-									<th>规格编码</th>
+									<th style="width:70px;">规格编码</th>
 									<th style="width:150px;">线上属性</th>
 									<th style="width:150px;">系统属性</th>
-									<th style="width:70px;">库存数</th>
-									<th style="width:70px;">待发数</th>
-									<th style="width:70px;">预留数</th>
-									<th style="width:70px;">警戒数</th>
-									<th style="width:70px;">成本价</th>
-									<th style="width:70px;">标售价</th>
-									<th style="width:70px;">代理价</th>
-									<th style="width:70px;">员工价</th>
+									<th style="width:65px;">库存数</th>
+									<th style="width:65px;">待发数</th>
+									<th style="width:65px;">预留数</th>
+									<th style="width:65px;">警戒数</th>
+									<th style="width:65px;">成本价</th>
+									<th style="width:65px;">标售价</th>
+									<th style="width:65px;">代理价</th>
+									<th style="width:65px;">员工价</th>
 									<th style="width:60px;">操作</th>
 								</tr>
 							</thead>
