fix assign product warn view

--- a/shopmanager/shopback/items/templates/items/product_detail.html
+++ b/shopmanager/shopback/items/templates/items/product_detail.html
@@ -188,10 +188,11 @@
 		display:none;
 	}
 	.badge{
-		padding:0px 0px;
+		padding:1px 1px;
 		font-size:8px;
 		webkit-border-radius:0px;
 		border-radius:0px;
+		line-height:10px;
 	}
     </style>
   </head>
