fix product detail and datatable sorting js

--- a/shopmanager/shopback/items/templates/items/product_assign_warn.html
+++ b/shopmanager/shopback/items/templates/items/product_assign_warn.html
@@ -22,7 +22,7 @@
 	</thead>
 	<tbody>
 	{% for item in items_list %}
-	<tr>
+	<tr class="{% cycle 'odd' 'even' %}">
 		<td>{{ item.seller_nick }}</td>
 		<td>{{ item.num_iid }}</td>
 		<td>{{ item.title }}</td>
