--- a/shopmanager/shopback/items/templates/items/product_detail.html
+++ b/shopmanager/shopback/items/templates/items/product_detail.html
@@ -344,7 +344,7 @@
 										{% if sku.is_split %}<span class="badge badge-info">拆
 										</span>{% endif  %}{% if sku.is_match %}<span class="badge badge-important">匹
 										</span>{% endif  %}{% if sku.sync_stock %}<span class="badge badge-success">同
-										</span>{% endif  %}{% if sku.post_check %}<span class="badge badge-warning">扫</span>{% endif  %}
+										</span>{% endif  %}{% if sku.post_check or product.post_check %}<span class="badge badge-warning">扫</span>{% endif  %}
 									</td>
 									<td>{{ sku.outer_id }}</td>
 									<td>{{ sku.properties_name }}</td>
