fix items update stock and product detail sku update

--- a/shopmanager/shopback/items/templates/items/product_detail.html
+++ b/shopmanager/shopback/items/templates/items/product_detail.html
@@ -334,7 +334,7 @@
 									<th style="width:65px;">预留数</th>
 									<th style="width:65px;">警戒数</th>
 									<th style="width:65px;">成本价</th>
-									<th style="width:65px;">标售价</th>
+									<th style="width:65px;">吊牌价</th>
 									<th style="width:65px;">代理价</th>
 									<th style="width:65px;">员工价</th>
 									<th style="width:60px;">操作</th>
