--- a/shopmanager/shopback/purchases/templates/purchases/purchase_page.html
+++ b/shopmanager/shopback/purchases/templates/purchases/purchase_page.html
@@ -154,6 +154,7 @@
 	.purchase-prompt-head{
 		height:20px;
 		background-color:#3A87AD;
+		margin:0px 0px 16px 0px;
 	}
 	#purchase-select-table th,#purchase-select-table td {
 		max-height:20px;
@@ -164,10 +165,7 @@
 		margin-bottom:2px;
 		width:60px;
 	}
-	#purchase-select-table tr td:first-child{
-		text-align:center;
-		background-color:#CCD1E6;
-	}
+
 	.prompt-title{
 		display:inline
 	}
@@ -318,15 +316,15 @@
 									<th>产品名</th>
 									<th>规格编码</th>
 									<th>规格名</th>
-									<th style="width:70px;">标准进价</th>
-									<th style="width:70px;">采购数</th>
+									<th style="width:80px;">标准进价</th>
+									<th style="width:80px;">采购数</th>
 									<th style="width:85px;">总费用</th>
-									<th>操作</th>
+									<th style="width:40px;">操作</th>
 								</tr>
 							</thead>
 							<tbody>
 								{% for item in purchase.purchase_items %}
-								<tr class="{% cycle 'odd' 'even' %}">
+								<tr  pid="{% if item.product_id %}{{ item.product_id }}{% endif %}" sid="{% if item.sku_id %}{{ item.sku_id }}{% endif %}">
 									<td>{{ item.id }}</td>
 									<td>{{ item.outer_id }}</td>
 									<td>{{ item.name }}</td>
@@ -336,8 +334,8 @@
 									<td>{{ item.purchase_num }}</td>
 									<td>{{ item.total_fee }}</td>
 									<td>
-										<a class="edit" href="javascript:void(0);"><icon class="icon-pencil"></icon></a>
-										<a class="delete" href="javascript:void(0);"><icon class="icon-remove"></icon></a>
+										<a class="edit" href="javascript:void(0);"><icon class="icon-edit"></icon>
+										</a><a class="delete" href="javascript:void(0);"><icon class="icon-remove"></icon></a>
 									</td>
 								</tr>
 								{% endfor %}
@@ -389,14 +387,15 @@
 		<div id="purchase-prompt-body" class="purchase-prompt-body">
 			<table id="purchase-select-table" class="table table-bordered">
 				<thead>
-						<th>序号</th>
+					<tr>
 						<th>商家编码</th>
-						<th>商品名</th>
+						<th style="width:250px;">商品名</th>
 						<th>规格编码</th>
 						<th>规格名</th>
 						<th>标准进价</th>
 						<th>采购数</th>
 						<th>操作</th>
+					</tr>
 				</thead>
 				<tbody>
 				</tbody>
@@ -439,7 +438,8 @@
 			deposite_id: 'required',
 			service_date: 'required',
             prepay_cent: {required:true,number:true,max:1},
-     },});
-     $('.chosen-select').chosen({search_contains:true});
+    },});
+    $('.chosen-select').chosen({search_contains:true});
+     
 </script>
 </html>
