--- a/shopmanager/templates/admin/base.html
+++ b/shopmanager/templates/admin/base.html
@@ -26,6 +26,9 @@
         </div>
         {% if user.is_active and user.is_staff %}
         <div id="user-tools">
+        	<div id="link_openerp" style="padding:10px;display:inline;margin-right:100px;background-color:grey;font-size:16px;">
+        	  <a href="http://qiyue.huyi.so/" target="_blank">内部管理系统</a>
+        	</div>
             {% trans 'Welcome,' %}
             <strong>{% filter force_escape %}{% firstof user.first_name user.username %}{% endfilter %}</strong>.
             {% block userlinks %}
