--- a/shopmanager/site_media/static/css/admin/common.css
+++ b/shopmanager/site_media/static/css/admin/common.css
@@ -425,6 +425,7 @@ input[type="submit"].btn.btn-mini {
   margin-left: 10px;
   min-width:300px;
   max-width:600px;
+  line-height:5px;
   word-break:break-all;
   word-wrap: break-word; 
   background-color: #f5f5f5;
