fix trade admin and  add signal rule to comment task

--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -163,5 +163,9 @@
 			}
 		}
 		
+		window.onload = function(){
+			new ordercheck.Manager();
+  			new tradetag.Manager();
+		}
 	</script> 
 {% endblock %}
