--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -96,6 +96,10 @@
                 快递查询
               </a>
             </li>
+            <li>
+              <a href="/trades/fenxiao/count/" class="addlink" target="_blank">分销商业务查询
+              </a>
+            </li>
           {% endblock %}
         </ul>
       {% endif %}
