--- a/shopmanager/shopapp/yunda/templates/admin/yunda/change_list.html
+++ b/shopmanager/shopapp/yunda/templates/admin/yunda/change_list.html
@@ -60,6 +60,10 @@
               </a>
             </li>
             <li>
+              <a href="/app/yunda/today/diff/" class="addlink " target="_blank">今日集包统计
+              </a>
+            </li>
+            <li>
               <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
                 {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
               </a>
