fix yunda package upload and add ProductDaySale to items models

--- a/shopmanager/templates/items/product_barcode_page.html
+++ b/shopmanager/templates/items/product_barcode_page.html
@@ -99,7 +99,7 @@
 								<td>{{ product.name }}</td>
 								<td></td>
 								<td></td>
-								<td>{{ item.barcode }}</td>
+								<td>{{ product.barcode }}</td>
 								<td>
 									<a class="edit" href=""><icon class="icon-pencil"></icon></a>
 								</td>
