--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -1,116 +1,138 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>商品查询界面</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-<script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
-<script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
-<script src='{{ STATIC_URL }}jquery/addons/jquery.form.js'></script>
-<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
-<style type="text/css" title="currentStyle">
-	@import "{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css";
-	@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
-	@import "{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css";
-	@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
-	@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
-</style>
-<style type="text/css">
-body,div {
-	margin: 0px auto;
-	padding: 0px;
-}
-
-body {
-	width: 1200px;
-}
-
-.container {
-	width: 1200px;
-}
-
-.table-bordered {
-	border: 1px solid #DDD;
-	border-collapse: separate;
-	border-left: 0;
-	border-top: 0;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-.table {
-	width: 100%;
-	margin-bottom: 4px;
-}
-
-form {
-	margin-bottom: 4px;
-}
-
-table {
-	max-width: 100%;
-	background-color: white;
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-tr {
-	display: table-row;
-	vertical-align: inherit;
-	border-color: inherit;
-}
-</style>
+   <title>商品销量统计</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+	<!-- <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery.ui.datepicker-zh-CN.js.js" type="text/javascript" charset="gb2312"></script> -->
+    <style type="text/css">
+        *{ margin:0; padding:0;}
+        ul li{ 
+            list-style:none; 
+            display:inline; 
+            margin-top:30px;
+            margin-left:20px;
+            float:left;
+        }
+        ul{
+            width:900px;
+            display:block; 
+        }
+        input{
+            width:140px;
+        }
+        select{
+            width:120px;
+        }
+        .inner-filter{
+            color:green;        
+        }
+        .sale_num{
+            width:25px;
+            margin-left:0px;
+        }
+    </style>
 </head>
 <body>
+{% with object.sale_stats as sale_stats %}
 <div class="container">
-<div id="head-page">
-<div class="page-filter"></div>
+<div class="outer-filter">
+<form  class="form-inline" method="POST" action="/items/product/sale/" >
+  <div>
+     <div>
+       <label class="control-label" for="shop_id">选择店铺:</label>
+         <select name="shop_id" class="selector">
+           <option value="" >全部</option>
+	{% for shop in sale_stats.shops %}
+	<option value="{{ shop.id }}" {% if sale_stats.shop_id == shop.id %}selected{% endif %}>{{ shop.nick }}</option>
+	{% endfor %}
+         </select>
+      </div>
+      <div>
+        <label class="control-label" for="df">选择日期:</label>
+        <input type="text" id="f_datepicker" name="df" class="datepicker" value="{{ sale_stats.df }}" />-
+        <input type="text" id="t_datepicker" name="dt" class="datepicker" value="{{ sale_stats.dt }}" />
+      </div>
+       <div>
+         <label class="control-label" for="outer_id">商家编码:</label>
+         <input type="text" name="outer_id" value="{{ sale_stats.outer_id }}"/>
+       </div>
+        <div><input type="submit" value="查询" class="btn btn-primary"/>  </div>
+  </div>
+</form>
 </div>
-<div id="center-page">
-<table id="warn-items-table"
-	class="table table-bordered table-condensed">
-	<thead>
-		<tr>
-			<th>序号</th>
-			<th>商品编码</th>
-			<th style="width: 170px;">商品名称</th>
-			<th>规格编码</th>
-			<th style="width: 200px;">线上属性</th>
-			<th>系统属性</th>
-			<th style="width: 80px;">库存数</th>
-			<th>待发数</th>
-			<th style="width: 90px;">预留数</th>
-			<th style="width: 70px;">操作</th>
-		</tr>
-	</thead>
-	<tbody>
-		{% for item in object.warn_skus %}
-		<tr >
-			<td>{{ forloop.counter }}</td>
-			<td>{{ item.product.outer_id }}</td>
-			<td>{{ item.product.name }}</td>
-			<td>{{ item.outer_id }}</td>
-			<td>{{ item.properties_name }}</td>
-			<td>{{ item.properties_alias }}</td>
-			<td>{{ item.quantity }}</td>
-			<td>{{ item.wait_post_num }}</td>
-			<td>{{ item.remain_num }}</td>
-			<td><a class="edit" href="#" title="修改"><icon
-				class="icon-edit"></icon></a><a class="assign" href="#" title="分配"><icon
-				class="icon-asterisk"></icon> </a><a class="remain" href="#" title="待用"><icon
-				class="icon-pause"></icon> </a><a class="delete" href="#" title="作废"><icon
-				class="icon-remove"></icon></a></td>
-		</tr>
-		{% endfor %}
-	</tbody>
-	<tfoot>
-	</tfoot>
-</table>
+<div id="content" style="display:block;clear:both;">
+  <div class="inner-filter">
+    <div>
+	<label class="control-label"  for="sale_gte">销量区间:</label>
+	<input type="text" name="sale_gte" class="sale_num" value="" size="4"
+	/>-<input type="text" name="sale_lte" class="sale_num" value="" size="4"/>
+    </div>
+   <div>
+	<label class="control-label"  for="sale_payment_gte" >售额区间:</label>
+	<input type="text" name="sale_payment_gte" class="sale_num" value="" size="4"
+	/>-<input type="text" name="sale_payment_lte" class="sale_num" value="" size="4"/>
+    </div>
+    <button>过滤</button>
+  </div>
+  <table>
+    <tr>
+      <th>商品/规格编码</th><th style="width:150px;">商品/规格名称</th><th>销售数量</th><th>成本</th><th>销售额</th><th>退款</th>
+    </tr>
+   <tr>
+        <td>-</td>
+        <td style="width:150px;">共计</td>
+        <td>{{ sale_stats.total_sale_num }}</td>
+        <td>{{ sale_stats.total_sale_cost }}</td>
+        <td>{{ sale_stats.total_sale_payment }}</td>
+        <td>{{ sale_stats.total_sale_refunds }}</td>
+    </tr>
+  </table>
+  {% for product_id ,product in sale_stats.sale_items %}
+  <div class="list-tables">
+    <div class="list-table-head">
+      <table>
+        <tr>
+            <td>{{ product_id }}</td>
+            <td style="width:150px;">{{ product.name }}</td>
+            <td>{{ product.sale_num }}</td>
+            <td>{{ product.sale_cost }}</td>
+            <td>{{ product.sale_payment }}</td>
+            <td>{{ product.sale_refunds }}</td>
+        </tr>
+    </table>
+    </div>
+    <div class="list-table-content">
+	<table class="table table-bordered  table-condensed">
+	    {% for sku_id,sku in product.skus %}
+		<td >{{ sku_id }}</td>
+		<td >{{ sku.name }}</td>
+		<td >{{ sku.num }}</td>
+		<td >{{ sku.sale_cost }}</td>
+		<td >{{ sku.sale_payment }}</td>
+                          <td >{{ sku.sale_refund }}</td>
+	    {% endfor %}
+	</table>
+    </div>
+  </div>
+  {% endfor %}
 </div>
-</div>
-<div id="assgin-dialog">
-</div>
+</div>	
+{% endwith %}
 </body>
-<script src="{{ STATIC_URL }}script/items/stockWarnMgr.js"></script>
+<script type="text/javascript">
+    $(function() {
+         $("#f_datepicker").datepicker({
+                dateFormat: "yy-mm-dd"
+         });
+        $("#t_datepicker").datepicker({
+                dateFormat: "yy-mm-dd"
+        });
+    });
+</script>
 </html>
