fix product sale stat

--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -32,11 +32,18 @@
         .div-inline{
             display:inline;        
         }
+        .outer-filter{
+            margin:10px auto;        
+        }
         .inner-filter{
-            margin:40px;       
+            margin10px;     
+            float:left;  
         }
         .inner-filter input{
             width:25px;        
+        }
+        .inner-filter label{
+            display:inline;        
         }
         .inner-filter-one{
            color:#f89406;
