fix product sale stat html

--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -32,7 +32,8 @@
             display:inline;        
         }
         .outer-filter{
-            margin:10px auto;        
+            margin:20px auto 10px;   
+            text-align:center;     
         }
         .inner-filter{
             margin10px;     
