--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -56,6 +56,7 @@
         }
         .list-table-head table{
             margin-bottom:0px;
+            background-color:gray;
         }
     </style>
 </head>
@@ -160,5 +161,13 @@
                 dateFormat: "yy-mm-dd"
         });
     });
+    $(document).ready(function(){
+        $(".list-table-content").hide(); 
+        $(".list-table-head").live("click",function(event){
+                var evt = event.srcElement || event.target;  
+                $(evt).next().toggle();   
+        })
+    }
+    
 </script>
 </html>
