comment detail count

--- a/shopmanager/shopapp/comments/templates/comments/comment_base.html
+++ b/shopmanager/shopapp/comments/templates/comments/comment_base.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     {% block comment_count %} {% endblock %}
+    {% block replyer_detail %} {% endblock %}
   </body>
 </html>
