--- a/shopmanager/templates/admin/comments/change_list.html
+++ b/shopmanager/templates/admin/comments/change_list.html
@@ -56,6 +56,10 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             <li>
+              <a href="/app/comment/replyer_detail/" class="addlink" target="_blank">客服评价内容
+              </a>
+            </li>
+            <li>
               <a href="/app/comment/count/" class="addlink" target="_blank">客服评价统计
               </a>
             </li>
