fix yunda app add weight package fixture

--- a/shopmanager/shopapp/yunda/templates/admin/yunda/change_list.html
+++ b/shopmanager/shopapp/yunda/templates/admin/yunda/change_list.html
@@ -56,7 +56,7 @@
         <ul class="object-tools">
           {% block object-tools-items %}
           	<li>
-              <a href="/app/yunda/package/weight/" class="addlink " target="_blank">揽件称重</a>
+              <a href="/app/yunda/package/weight/" class="addlink " target="_blank">揽件扫描称重</a>
             </li>
           	<li>
               <a href="javascript:void(0);" class="addlink upload-csvfile" target="_blank">集包文件导入</a>
