fix yunda app and items

--- a/shopmanager/shopapp/yunda/templates/admin/yunda/change_list.html
+++ b/shopmanager/shopapp/yunda/templates/admin/yunda/change_list.html
@@ -58,16 +58,16 @@
           	<li>
               <a href="/app/yunda/package/weight/" class="addlink " target="_blank">揽件扫描称重</a>
             </li>
-          	<li>
-              <a href="javascript:void(0);" class="addlink upload-csvfile" target="_blank">集包文件导入</a>
-            </li>
             <li>
-              <a href="/app/yunda/today/diff/" class="addlink " target="_blank">今日集包统计</a>
+              <a href="/app/yunda/today/push/" class="addlink " target="_blank">上传今日包裹重量</a>
             </li>
             <li>
               <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
                 {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
               </a>
+            </li>
+            <li>
+              <a href="javascript:void(0);" class="addlink upload-csvfile" target="_blank">文件导入</a>
             </li>
           {% endblock %}
         </ul>
