--- a/shopmanager/shopapp/yunda/templates/yunda/weight_small_package.html
+++ b/shopmanager/shopapp/yunda/templates/yunda/weight_small_package.html
@@ -3,6 +3,7 @@
   <head>
     <title>揽件扫描称重</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=decice-width,uer-scalable=no">
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
     <script src='{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js'></script>
@@ -42,7 +43,10 @@
     	text-align:left;
     }
     .detail-panel label{
-    	margin-left:30px;
+    	margin-left:15px;
+    }
+    .detail-panel input{
+    	width:80px;
     }
     #sort_code{
     	display:inline;
@@ -53,7 +57,7 @@
     	border: 2px solid grey;
     }
     #address{
-    	width:500px;
+    	width:450px;
     }
     .body-panel {
     	overflow-x:hidden;
