fix yunda admin and comments admin and items tasks

--- a/shopmanager/templates/related_orders_template.html
+++ b/shopmanager/templates/related_orders_template.html
@@ -60,7 +60,7 @@
 	</div>
     <div class='w3c_tables'>
         <table align="center">
-	        <thead style="background-color:#2C7400">
+	        <thead style="background-color:#C3C3C3;">
 	        <td>商品外部编码</td>
 	        <td>商品图片</td>
 	        <td>商品名称</td>
